@@ -1,6 +1,7 @@
 * 2013-09-12 - thorben.betten@open-xchange.com
 
  - Fix for bug 28828: Consider string length when iterating over its characters
+ - Fix for bug 28829: Added null guard when closing IMAP connection
 
 * 2013-09-10 - thorben.betten@open-xchange.com
 
